Fixes the mobile nav visibility

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,11 +71,13 @@ form {
   background: white;
   z-index: 10;
   padding: 2rem 1rem 1rem 2rem;
+  opacity: 0;
   transform: translateX(-100%);
-  transition: transform 0.3s ease-out;
+  transition: opacity 0s, transform 0.3s ease-out;
 }
 
 .mobile-nav.open {
+  opacity: 100;
   transform: translateX(0);
 }
 
